--- a/package.json
+++ b/package.json
@@ -40,26 +40,25 @@
   "homepage": "https://github.com/dalisoft/nanoexpress#readme",
   "dependencies": {
     "@dalisoft/events": "^0.0.x",
+    "ajv": "^6.10.2",
+    "cookie": "^0.x",
+    "fast-json-stringify": "^1.x",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v15.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "coveralls": "^3.0.6",
-    "eslint": "^6.2.1",
-    "husky": "^3.0.3",
+    "eslint": "^6.2.2",
+    "husky": "^3.0.4",
     "jest": "^24.9.0",
-    "lint-staged": "^9.0.0",
+    "lint-staged": "^9.2.3",
     "prettier": "^1.17.1",
-    "rollup": "^1.19.4",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-run": "^1.1.0"
+    "rollup": "^1.20.2",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "peerDependencies": {
-    "cookie": "^0.x",
-    "fast-json-stringify": "^1.x",
-    "passport": "^0.4.0",
-    "ajv": "^6.x"
+    "passport": "^0.4.0"
   }
 }
